--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,9 @@
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
-    <script src="//www.parsecdn.com/js/parse-1.6.7.min.js"></script>
+
+    <!-- parse library -->
+    <script src="lib/parse/parse.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/routes.js"></script>
