--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
 
     <!-- parse library -->
     <script src="lib/parse/parse.min.js"></script>
+    <script src="lib/angular-validation-match/dist/angular-validation-match.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/routes.js"></script>
